# DroneSwarmResearch

./: .gitignore  CLAUDE.md  README.md
docs/: demo.js  index.html
results/: centralized_demo.csv  comparison.csv  comparison_summary.json  matrix.csv  matrix_summary.json  node_failure_hard.csv  relay_k_sweep.csv  relay_multibranch.csv  relay_rescue.csv  scaling.csv  summary.json  winners.json
ros2_backend/: README.md
ros2_backend/swarm_sar/: package.xml  setup.cfg  setup.py
ros2_backend/swarm_sar/config/: params.yaml
ros2_backend/swarm_sar/launch/: swarm_sar.launch.py
ros2_backend/swarm_sar/swarm_sar/: __init__.py  _rclpy_guard.py  base_station_node.py  comm_bridge_node.py  comm_models.py  drone_node.py  metrics_node.py
ros2_backend/swarm_sar/swarm_sar/strategies/: __init__.py  base.py  centralized.py  decentralized.py  stigmergy.py
ros2_backend/swarm_sar/worlds/: disaster.world
ros2_backend/swarm_sar_interfaces/: CMakeLists.txt  package.xml
ros2_backend/swarm_sar_interfaces/msg/: CommMessage.msg  DroneState.msg
swarm_sim/: __init__.py  comm.py  compare.py  config.py  decentralized.py  drone.py  experiments.py  full_matrix.py  metrics.py  relay.py  relay_experiment.py  relay_k_sweep.py  relay_multibranch_experiment.py  scaling_study.py  simulator.py  stigmergy.py  strategies.py  world.py
